# trojan

./: CMakeLists.txt  README.md  build.sh  trojan.sh
.github/workflows/: main.yml
src/core/: authenticator.cpp  authenticator.h
src/session/: serversession.cpp
